# all-git-forks

./: .bash_history  .bashrc  .clang-format  .clang_complete  .cryptoBuf  .gdbinit  .gitattributes  .gitconfig  .gitignore  .gitmodules  .hgrc  .mailmap  .npmrc  .screenrc  .tmux.conf  .topdeps  .topmsg  .toprc  .travis.yaml  .travis.yml  .viminfo  .vimrc  .zshrc  0000-cover-letter.patch  0001-Document-the-HTTP-transport-protocol.patch  0001-rebase-i-restore-autostash-on-abort.patch  0002-normalize-indentation-with-protcol-common.txt.patch  0002-use-spaces-instead-of-tabs.patch  0002-whitespace-changes.patch  0003-capitalize-key-words-according-to-RFC-2119.patch  0003-fix-casing.patch  0003-s-paramterized-parameterized.patch  0004-fix-casing.patch  0004-normalize-rules-with-RFC-5234.patch  0004-use-common-rules.patch  0005-drop-rules-etc.-already-available-in-protocol-common.patch  0005-drop-rules-etc.-common-to-the-pack-protocol.patch  0005-reference-rules-from-protocol-common.txt.patch  0005-use-common-rules.patch  0005-use-instead-of.patch  (+1086 more)
20150430132408-a75942b/: index.json
20150501112915-44af3c9/: index.json
20150502145725-c94dfc2/: index.json
20150702173751-2fdae08/: index.json
A-line.confd/: Source.list  git.conf
Backup/: git.sln
Documentation/: .gitattributes  .gitignore  .project  .vimrc  CodingGuidelines  CommunityGuidelines  Makefile  Makefile.ja_JP  RelNotes-1.6.1.txt  RelNotes-1.6.2.txt  SubmittingPatches  asciidoc.conf  asciidoctor-extensions.rb  blame-options.txt  build-docdep.perl  cat-texi.perl  cmd-list.perl  config-vars-src.txt  config.asciidoc  config.txt  date-formats.txt  diff-config.txt  diff-format.asciidoc  diff-format.txt  diff-generate-patch.txt  diff-options.txt  docbook-xsl.css  docbook.xsl  everyday.asciidoc  everyday.txt  fetch-options.txt  fetch-push-security.txt  fix-texi.perl  git-add.asciidoc  git-add.html  git-add.txt  git-am.txt  git-annotate.asciidoc  git-annotate.txt  git-apply.txt  (+276 more)
android/: common-cmds.h  gitconfig
bin-wrappers/: git  git-cvsserver  git-receive-pack  git-remote-ext  git-shell  git-upload-archive  git-upload-pack  test-chmtime  test-config  test-ctype  test-date  test-delta  test-dump-cache-tree  test-dump-split-index  test-dump-untracked-cache  test-fake-ssh  test-genrandom  test-hashmap  test-index-version  test-line-buffer  test-match-trees  test-mergesort  test-mktemp  test-parse-options  test-path-utils  test-prio-queue  test-read-cache  test-regex  test-revision-walking  test-run-command  test-scrap-cache-tree  test-sha1  test-sha1-array  test-sigchain  test-string-list  (+6 more)
(+4165 files in other folders)
